--- a/exo-login/style.css
+++ b/exo-login/style.css
@@ -68,3 +68,9 @@ button[type="submit"] {
   padding: 0.75rem 1rem;
   font-weight: bold;
 }
+
+.error {
+  padding:10px;
+  background-color: black;
+  color: white;
+}
